--- a/src/main/java/gui/Iscrizione.form
+++ b/src/main/java/gui/Iscrizione.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="5f538" class="javax.swing.JLabel" binding="UsernameLabel">
+      <component id="5f538" class="javax.swing.JLabel" binding="usernameLabel">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -29,7 +29,7 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="password"/>
+          <text value="Password"/>
         </properties>
       </component>
       <component id="b49d0" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
@@ -52,12 +52,12 @@
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="c620d" class="javax.swing.JLabel">
+      <component id="c620d" class="javax.swing.JLabel" binding="confermaPasswordLabel">
         <constraints>
           <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Conferma"/>
+          <text value="Conferma Password"/>
         </properties>
       </component>
       <component id="19e25" class="javax.swing.JPasswordField" binding="passwordField2" default-binding="true">
