--- a/src/main/java/gui/CreazioneHackathon.form
+++ b/src/main/java/gui/CreazioneHackathon.form
@@ -48,14 +48,6 @@
           <text value="Data Fine"/>
         </properties>
       </component>
-      <component id="9f44d" class="javax.swing.JFormattedTextField" binding="dataFineformattedTextField">
-        <constraints>
-          <grid row="8" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="525d5" class="javax.swing.JLabel" binding="limiteIscrittiLabel">
         <constraints>
           <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -70,7 +62,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="fb40e" class="javax.swing.JTextField" binding="sedeTextField">
         <constraints>
@@ -83,19 +77,6 @@
       <component id="73556" class="javax.swing.JSpinner" binding="limiteIscrittiSpinner">
         <constraints>
           <grid row="10" column="9" row-span="1" col-span="1" vsize-policy="2" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <vspacer id="28ea9">
-        <constraints>
-          <grid row="11" column="7" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <component id="3fb67" class="javax.swing.JFormattedTextField" binding="dataInizioFormattedTextField">
-        <constraints>
-          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
         </constraints>
         <properties/>
       </component>
@@ -156,6 +137,23 @@
           <text value="Crea"/>
         </properties>
       </component>
+      <component id="21b03" class="javax.swing.JSpinner" binding="dataInizioSpinner">
+        <constraints>
+          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="4cce" class="javax.swing.JSpinner" binding="dataFineSpinner">
+        <constraints>
+          <grid row="8" column="2" row-span="1" col-span="8" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <vspacer id="17c93">
+        <constraints>
+          <grid row="11" column="4" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
