--- a/src/main/java/gui/Home.form
+++ b/src/main/java/gui/Home.form
@@ -52,12 +52,12 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="e959a" class="javax.swing.JButton" binding="notificaButton" default-binding="true">
+      <component id="e959a" class="javax.swing.JButton" binding="areaPersonaleButton">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Inviti"/>
+          <text value="Area Personale"/>
         </properties>
       </component>
       <component id="ad6b7" class="javax.swing.JButton" binding="creaHackathonButton" default-binding="true">
