--- a/src/main/java/gui/OrganizzatoreView.form
+++ b/src/main/java/gui/OrganizzatoreView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="organizzatorePanel" layout-manager="GridLayoutManager" row-count="15" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="500" height="420"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -100,14 +100,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="e5c78" class="javax.swing.JButton" binding="apriIscrizioniButton" default-binding="true">
-        <constraints>
-          <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Apri iscrizioni"/>
-        </properties>
-      </component>
       <vspacer id="4e840">
         <constraints>
           <grid row="14" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
@@ -152,6 +144,30 @@
         </constraints>
         <properties>
           <text value="Giudici"/>
+        </properties>
+      </component>
+      <component id="e5c78" class="javax.swing.JButton" binding="apriIscrizioniButton" default-binding="true">
+        <constraints>
+          <grid row="13" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Apri iscrizioni"/>
+        </properties>
+      </component>
+      <component id="e2cb7" class="javax.swing.JButton" binding="effettuaCambiamentiButton">
+        <constraints>
+          <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Effetua Cambiamenti"/>
+        </properties>
+      </component>
+      <component id="776dc" class="javax.swing.JButton" binding="precedentiButton" default-binding="true">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Precedenti"/>
         </properties>
       </component>
     </children>
